--- a/examples/populate/populate-notebook.ipynb
+++ b/examples/populate/populate-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,36 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def strTimeProp(start, end, format, prop):\n",
-    "    \"\"\"Get a time at a proportion of a range of two formatted times.\n",
-    "\n",
-    "    start and end should be strings specifying times formated in the\n",
-    "    given format (strftime-style), giving an interval [start, end].\n",
-    "    prop specifies how a proportion of the interval to be taken after\n",
-    "    start.  The returned time will be in the specified format.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    stime = time.mktime(time.strptime(start, format))\n",
-    "    etime = time.mktime(time.strptime(end, format))\n",
-    "\n",
-    "    ptime = stime + prop * (etime - stime)\n",
-    "\n",
-    "    return time.strftime(format, time.localtime(ptime))\n",
-    "\n",
-    "\n",
-    "def randomDate(start, end, prop):\n",
-    "    return strTimeProp(start, end, '%m/%d/%Y %I:%M %p', prop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -53,16 +24,38 @@
    "source": [
     "providers = ['unknown', 'twitter', 'facebook', 'google']\n",
     "session = requests.Session()\n",
-    "login = session.post('http://localhost:5000/login/facebook', headers=headers)\n",
+    "login = session.get('https://deep-rideshare-server.herokuapp.com/login/facebook', headers=headers)\n",
     "\n",
-    "for i in range(1, 11):\n",
+    "for i in range(1, 2):\n",
     "    data = {}\n",
     "    data['user_id'] = random.randint(100000000000000,999999999999999)\n",
     "    data['name'] = str(names.get_full_name())\n",
     "    data['provider'] = random.choice(providers)\n",
     "\n",
-    "    session.post('http://localhost:5000/user', data=json.dumps(data), headers=headers)\n",
+    "    session.post('https://deep-rideshare-server.herokuapp.com/user', data=json.dumps(data), headers=headers)\n",
     "    time.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'OK'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "login.text"
    ]
   },
   {
